namespace.yml
apiVersion: v1
kind: Namespace
# namespace : permet de compartimenter des pods entre eux.

metadata:
  name: mongo-namespace
