scraper-malt.deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scraper-malt-deployment
  namespace: mongo-namespace
  labels:
    app: scraper

spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
        - name: scraper-malt
          image: swanndolia/scraper-malt:latest
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
