mongo-express.deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo-express-deployment
  namespace: mongo-namespace
  labels:
    app: mongo-express

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          env:                                        # charge les variable d'environnement
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              valueFrom:
                secretKeyRef:                         # provient des "secrets"
                  name: mongo-secret
                  key: mongo_username
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: mongo_password
            - name: ME_CONFIG_MONGODB_SERVER
              valueFrom:
                configMapKeyRef:                       # provient d'un ConfigMap
                  name: mongo-configmap
                  key: mongo_url

---

apiVersion: v1
kind: Service


metadata:
  name: mongo-express-service
  namespace: mongo-namespace
spec:
  selector:
    app: mongo-express
  type: NodePort

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
